k8s/core/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    prometheus: prometheus
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
